Addition of working groups 2,3 and 4

--- a/resources/html/futures-analyses.html
+++ b/resources/html/futures-analyses.html
@@ -115,7 +115,7 @@
                 </section>
                 <section class="value-prop2 py-5">
                     <div class="container">
-                        <h2 class="text-center">High Impact Products</h2>
+                        <h2 class="display-4 text-center">High Impact Products</h2>
                         <div class="row my-5">
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
