--- a/resources/html/scenario-analyses.html
+++ b/resources/html/scenario-analyses.html
@@ -56,21 +56,24 @@
                     </div>
                 </div>
             </div>
-            <div id="content" class="wg wg-extreme-weather">
+            <div id="content" class="wg wg-scenario-analyses">
                 <header>
                     <div class="background">
                         <div class="white circle large icon">
-                        <img src="images/icons/extreme-weather.svg" alt="Extreme weather icon">
+                        <img src="images/icons/scenario-analyses.svg" alt="Scenario analyses icon">
                     </div>
                     </div>
-                    <div class="container">
-                        <h1 class="display-4">Extreme Weather</h1>
+                    <div class="container mb-5">
+                        <h1 class="display-4">Scenario Analyses</h1>
                         <p class="subtitle text-center">
-                            Determining weather conditions and other associated factors with large wildfires in the past.
+                            Analyzing wildfire scenarios under climate change to inform planning for a resilient grid
                         </p>
                         <div class="line gray line-center"></div>
-                        <p class="mb-5">
-                            The hyperlocal weather at large wildfire events is often misunderstood due to lack of accurate weather measurements, limitations in instrumentation or forecasting inaccuracies, resulting in an underestimation of conditions by weather forecast models - especially wind extrema. Pyregence will use the latest machine learning and wildfire simulation techniques to better understand local weather conditions associated with fire events to derive the areas in the state where there is the most uncertainty on fire weather conditions and need for investment in additional weather stations. An upper-air profiler will also be piloted as an example of alternative instrumentation for measuring upstream weather to better forecast fire weather conditions.
+                        <p>
+                            California is faced with a challenging ‘new normal’: an increased risk of megafires potentially resulting in catastrophic impacts to society over the coming century. In response, the State will be implementing the 5th Climate Change Assessment to research and plan adaptation measures. The Pyregence consortium will support the 5th Assessment by developing wildfire scenarios under a changing climate to inform adaptation planning for a more resilient electric utility grid. Pyregence Consortium will implement best available science and technology to model wildfire risk under several climate and land-use scenarios. The ethos is to compare technical approaches in an open science/open source collaboration between wildfire scientists and technologists.
+                        </p>
+                        <p>
+                            The consortium will output future scenarios till the end of century differentiated by climate projections, land-use paths and landscape interventions. For each scenario, detailed data will be made publicly available to undertake secondary research to inform grid resiliency planning. All code will be open source and scenario output data will be available via a web-based platform primarily to serve 5th Assessment contributors but also the wider community of planners for a more resilient California.
                         </p>
                     </div>
                 </header>
@@ -79,65 +82,47 @@
                         <div class="row">
                             <div class="col-md-8">
                                 <h2 class="display-4">
-                                    More accurate weather forecasts
+                                   Goals
                                 </h2>
-                                <p class="mb-5">
-                                    Electric utilities need better weather forecasts to improve situational awareness of wildfire threats to and from the grid. Pyregence will support electric utilities by developing a methodology for optimal location of weather stations and piloting an upper-air profiler over a fire season to scout for early signs of impending extreme wind events.
+                                <p class="subtitle my-1">
+                                    Develop the next generation of coupled statistical/dynamical fire-climate-vegetation models to run long-term (to end-of-century) wildfire risk projections and incorporate best in-class science and technology to enhance the models.
+                                </p>
+                                <hr>
+                                <p class="subtitle my-1">
+                                    Support the Fifth Assessment by running the models for long-term wildfire projections and develop a planning support tool for IOUs, State agencies and stakeholders relying on the grid to visualize the impacts of wildfire under a changing climate.
                                 </p>
                             </div>
                             <div class="col-md-4 text-center">
-                                <img class="p-4" src="images/icons/weather-forecasts-icon-round@2x.png" alt="Weather forecasts icon">
-                            </div>
-                        </div>
-                        <div class="row features">
-                            <div class="col-md-3 d-flex">
-                                <p class="subtitle text-center my-2">
-                                    Improve understanding of the relationship of extreme weather conditions and wildfire in order to improve forecasting accuracy about future wildfire risk
-                                </p>
-                            </div>
-                            <div class="col-md-3 d-flex">
-                                <p class="subtitle text-center my-2">
-                                    Develop a methodology for identifying optimal configurations of weather stations
-                                </p>
-                            </div>
-                            <div class="col-md-3 d-flex">
-                                <p class="subtitle text-center my-2">
-                                    Provide recommendations for future siting of weather stations
-                                </p>
-                            </div>
-                            <div class="col-md-3 d-flex">
-                                <p class="subtitle text-center my-2">
-                                    Pilot test an upper-air profiler
-                                </p>
+                                <img class="p-4" src="images/icons/california-icon-circle@2x.png" alt="Weather forecasts icon">
                             </div>
                         </div>
                     </div>
                 </section>
                 <section class="value-prop2 py-5">
                     <div class="container">
-                        <h2 class="text-center">High Impact Products</h2>
+                        <h2 class="display-4 text-center">High Impact Products</h2>
                         <div class="row my-5">
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
-                                    <img class="mb-3" src="images/icons/map-icon@2x.jpg" alt="Web map icon">
+                                    <img class="mb-3" src="images/icons/computer-icon@2x.jpg" alt="Computer icon">
                                     <p class="text-center">
-                                        Web-map for optimizing location of weather stations across the state to improve situational awareness
+                                        Web-based platform to view wildfire scenarios for multiple climate projections, land-use pathways and land management interventions
                                     </p>
                                 </div>
                             </div>
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
-                                    <img class="mb-3" src="images/icons/data-icon@2x.jpg" alt="Data icon">
+                                    <img class="mb-3" src="images/icons/house-icon@2x.jpg" alt="House icon">
                                     <p class="text-center">
-                                        Data to assess benefits of upper-air profilers
+                                        A coupled statistical/dynamical fire-climate-vegetation models to run long-term wildfire projections
                                     </p>
                                 </div>
                             </div>
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
-                                    <img class="mb-3" src="images/icons/analysis-icon@2x.jpg" alt="Analysis icon">
+                                    <img class="mb-3" src="images/icons/trees-icon@2x.jpg" alt="Trees icon">
                                     <p class="text-center">
-                                        Historical analysis of fires to better understand extreme weather dynamics
+                                        Enhancements of projections to address wildfire in the WUI, drought and tree mortality, improved spatial scale, ingestion of new climate projections
                                     </p>
                                 </div>
                             </div>
@@ -146,71 +131,97 @@
                 </section>
                 <section class="team my-5">
                     <div class="container">
-                        <h2 class="text-center">Extreme Weather Team</h2>
+                        <h2 class="text-center">Scenario Analyses Team</h2>
                         <div class="line yellow line-center"></div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/janice-cohen.jpg" alt="Janice Cohen">
-                                    <h3 class="text-center">Janice Coen, PhD</h3>
+                                    <img class="headshot mb-4" src="images/team/leroy-westerling.jpg" alt="Leroy Westerling">
+                                    <h3 class="text-center">Leroy Westerling, PhD</h3>
                                     <p class="mb-1 text-center">
-                                        University of San Francisco and University Corporation for Atmospheric Research
+                                        UC Merced
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="text-center">
-                                        Lead of Workgroup #1 - Extreme Weather
+                                        Lead Workgroup #4 - Scenario Analyses
                                     </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/owen-doherty.jpg" alt="Owen Doherty">
-                                    <h3 class="text-center">Owen Doherty, PhD</h3>
+                                    <img class="headshot mb-4" src="images/team/matt-hurteau.jpg" alt="Matt Hurteau">
+                                    <h3 class="text-center">Matt Hurteau, PhD</h3>
                                     <p class="text-center">
-                                        Eagle Rock Analytics
+                                        University of New Mexico
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Co-lead of Workgroup #1 - Extreme Weather
+                                        Forest ecosystem modeler
                                     </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/tami-lavezzo.jpg" alt="Tami Lavezzo">
-                                    <h3 class="text-center">Tami Lavezzo</h3>
+                                    <img class="headshot mb-4" src="images/team/david-marvin.jpg" alt="David Marvin">
+                                    <h3 class="text-center">David Marvin, PhD</h3>
                                     <p class="mb-1 text-center">
-                                        Sonoma Technologies
+                                        Salo Sciences
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Upper Air Profiler Team
+                                        Vegetation and fuels mapping
                                     </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/bryan-penfold.jpg" alt="Bryan Penfold">
-                                    <h3 class="text-center">Bryan Penfold</h3>
+                                    <img class="headshot mb-4" src="images/team/benjamin-sleeter.jpg" alt="Benjamin Sleeter">
+                                    <h3 class="text-center">Ben Sleeter, PhD</h3>
                                     <p class="mb-1 text-center">
-                                        Sonoma Technologies
+                                        United States Geological Survey
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Upper Air Profiler Team
+                                        Land use scenario modeler
                                     </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/shihming-huang.jpg" alt="ShihMing Huang">
-                                    <h3 class="text-center">ShihMing Huang</h3>
+                                    <img class="headshot mb-4" src="images/team/todd-hawbaker.jpg" alt="Todd Hawbaker">
+                                    <h3 class="text-center">Todd Hawbaker, PhD</h3>
                                     <p class="mb-1 text-center">
-                                        Sonoma Technologies
+                                        United States Geological Survey
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Upper Air Profiler Team
+                                        Vegetation modeler
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                                <div class="indv p-3">
+                                    <img class="headshot mb-4" src="images/team/david-saah.jpg" alt="David Saah">
+                                    <h3 class="text-center">David Saah, PhD</h3>
+                                    <p class="mb-1 text-center">
+                                        Spatial Informatics Group
+                                    </p>
+                                    <div class="line yellow small line-center"></div>
+                                    <p class="mb-1 text-center">
+                                        Advisor
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                                <div class="indv p-3">
+                                    <img class="headshot mb-4" src="images/team/max-moritz.jpg" alt="Max Moritz">
+                                    <h3 class="text-center">Max Moritz</h3>
+                                    <p class="mb-1 text-center">
+                                        UC Santa Barbara
+                                    </p>
+                                    <div class="line yellow small line-center"></div>
+                                    <p class="mb-1 text-center">
+                                        Advisor
                                     </p>
                                 </div>
                             </div>
@@ -227,6 +238,15 @@
                                     </p>
                                 </div>
                             </div>
+                            <!--<div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                                <div class="indv p-3">
+                                    <img class="headshot mb-4" src="images/team/ryan-pressler.jpg" alt="Ryan Pressler">
+                                    <h3 class="text-center">Ryan Pressler</h3>
+                                    <p class="mb-1 text-center">
+                                        User interface/experience visionary and developer
+                                    </p>
+                                </div>
+                            </div>-->
                         </div>
                     </div>
                 </section>
