--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -100,8 +100,7 @@
                                                     Determining weather conditions and other factors associated with large wildfires in the past
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
-                                                    <!--<a href="/extreme-weather">Read More <img src="images/arrow-right-solid.png"></a>-->
-                                                    <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+                                                    <a href="/extreme-weather">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -120,8 +119,7 @@
                                                     Advancing research on fuel mapping and fire spread to inform next generation wildfire models
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
-                                                    <!--<a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>-->
-                                                    <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+                                                    <a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
                                         </div>
