--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -119,7 +119,8 @@
                                                     Advancing research on fuel mapping and fire spread to inform next generation wildfire models
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
-                                                    <a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>
+                                                    <!--<a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>-->
+                                                    <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -212,8 +213,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
-                                <!--<a class="btn text-white" href="/extreme-weather">Learn More</a>-->
-                                <a class="btn text-white" href="#">Learn More</a>
+                                <a class="btn text-white" href="/extreme-weather">Learn More</a>
                             </div>
                         </div>
                     </div>
