Updated Matt and Ryan pics, made home links live to WG pages

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -119,8 +119,7 @@
                                                     Advancing research on fuel mapping and fire spread to inform next generation wildfire models
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
-                                                    <!--<a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>-->
-                                                    <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+                                                    <a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -234,8 +233,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
-                                <!--<a class="btn text-white" href="/fire-behavior">Learn More</a>-->
-                                <a class="btn text-white" href="#">Learn More</a>
+                                <a class="btn text-white" href="/fire-behavior">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -256,8 +254,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
-                                <!--<a class="btn text-white" href="/wildfire-forecasts">Learn More</a>-->
-                                <a class="btn text-white" href="#">Learn More</a>
+                                <a class="btn text-white" href="/forecast-tools">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -278,8 +275,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
-                                <!--<a class="btn text-white" href="/futures-analyses">Learn More</a>-->
-                                <a class="btn text-white" href="#">Learn More</a>
+                                <a class="btn text-white" href="/scenario-analyses">Learn More</a>
                             </div>
                         </div>
                     </div>
