--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -177,7 +177,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--<div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/matt-spencer.jpg" alt="Matt Spencer">
                                     <h3 class="text-center">Matt Spencer</h3>
@@ -189,7 +189,7 @@
                                         Senior programmer for tool development
                                     </p>
                                 </div>
-                            </div>-->
+                            </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo">
@@ -229,7 +229,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--<div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/ryan-pressler.jpg" alt="Ryan Pressler">
                                     <h3 class="text-center">Ryan Pressler</h3>
@@ -237,7 +237,7 @@
                                         User interface/experience designer
                                     </p>
                                 </div>
-                            </div>-->
+                            </div>
                         </div>
                     </div>
                 </section>
