--- a/resources/html/scenario-analyses.html
+++ b/resources/html/scenario-analyses.html
@@ -238,7 +238,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--<div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/ryan-pressler.jpg" alt="Ryan Pressler">
                                     <h3 class="text-center">Ryan Pressler</h3>
@@ -246,7 +246,7 @@
                                         User interface/experience visionary and developer
                                     </p>
                                 </div>
-                            </div>-->
+                            </div>
                         </div>
                     </div>
                 </section>
