--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -180,13 +180,13 @@
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/matt-spencer.jpg" alt="Matt Spencer">
-                                    <h3 class="text-center">Matt Spencer</h3>
+                                    <h3 class="text-center">Matt Spencer, P.E.</h3>
                                     <p class="mb-1 text-center">
                                         Spatial Informatics Group
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Senior programmer for tool development
+                                        Senior software engineer for tool development
                                     </p>
                                 </div>
                             </div>
