--- a/resources/html/scenario-analyses.html
+++ b/resources/html/scenario-analyses.html
@@ -143,7 +143,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="text-center">
-                                        Lead Workgroup #4 - Scenario Analyses
+                                        Lead for Scenario Analysis Workgroup (#4)
                                     </p>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Forest ecosystem modeler
+                                        Forest Ecosystem Modeler
                                     </p>
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Vegetation and fuels mapping
+                                        Vegetation and Fuels Mapping
                                     </p>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Land use scenario modeler
+                                        Land Use Scenario Modeler
                                     </p>
                                 </div>
                             </div>
@@ -201,14 +201,27 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/david-saah.jpg" alt="David Saah">
-                                    <h3 class="text-center">David Saah, PhD</h3>
+                                    <img class="headshot mb-4" src="images/team/jonathan-boldwin.jpg" alt="Jonathan Boldwin">
+                                    <h3 class="text-center">Jonathan Boldwin, PhD</h3>
+                                    <p class="mb-1 text-center">
+                                        UC Merced
+                                    </p>
+                                    <div class="line yellow small line-center"></div>
+                                    <p class="mb-1 text-center">
+                                        Programmer and Lead Data Manager
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                                <div class="indv p-3">
+                                    <img class="headshot mb-4" src="images/team/charles-maxwell.jpg" alt="Charles Maxwell">
+                                    <h3 class="text-center">Charles Maxwell, PhD</h3>
                                     <p class="mb-1 text-center">
                                         Spatial Informatics Group
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Advisor
+                                        Forest Ecosystem Modeler
                                     </p>
                                 </div>
                             </div>
@@ -227,23 +240,27 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/joe-scott.jpg" alt="Joe Scott">
-                                    <h3 class="text-center">Joe Scott</h3>
+                                    <img class="headshot mb-4" src="images/team/david-saah.jpg" alt="David Saah">
+                                    <h3 class="text-center">David Saah, PhD</h3>
                                     <p class="mb-1 text-center">
-                                        Pyrologix
+                                        Spatial Informatics Group and University of San Francisco
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Advisor
+                                        Project Investigator
                                     </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
-                                    <img class="headshot mb-4" src="images/team/ryan-pressler.jpg" alt="Ryan Pressler">
-                                    <h3 class="text-center">Ryan Pressler</h3>
+                                    <img class="headshot mb-4" src="images/team/shane-romsos.jpg" alt="Shane Romsos">
+                                    <h3 class="text-center">Shane Romsos, M.Sc.</h3>
                                     <p class="mb-1 text-center">
-                                        User interface/experience visionary and developer
+                                        Spatial Informatics Group
+                                    </p>
+                                    <div class="line yellow small line-center"></div>
+                                    <p class="text-center">
+                                        Project Manager
                                     </p>
                                 </div>
                             </div>
