--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -160,7 +160,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        User Engagement Team, forecast team support
+                                        User Engagement Team, Forecast Tools Workgroup support
                                     </p>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Director of Environmental Modelling and Software
+                                        Programmer for fire models and forecast tools
                                     </p>
                                 </div>
                             </div>
@@ -186,7 +186,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Senior software engineer for tool development
+                                        Programmer for forecast tool development
                                     </p>
                                 </div>
                             </div>
@@ -212,7 +212,7 @@
                                     </p>
                                     <div class="line yellow small line-center"></div>
                                     <p class="mb-1 text-center">
-                                        Senior programmer fire model development
+                                        Programmer fire model development
                                     </p>
                                 </div>
                             </div>
@@ -235,6 +235,32 @@
                                     <h3 class="text-center">Ryan Pressler</h3>
                                     <p class="mb-1 text-center">
                                         User interface/experience designer
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                                <div class="indv p-3">
+                                    <img class="headshot mb-4" src="images/team/david-saah.jpg" alt="David Saah">
+                                    <h3 class="text-center">David Saah, PhD</h3>
+                                    <p class="mb-1 text-center">
+                                        Spatial Informatics Group and University of San Francisco
+                                    </p>
+                                    <div class="line yellow small line-center"></div>
+                                    <p class="text-center">
+                                        Principle Investigator
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                                <div class="indv p-3">
+                                    <img class="headshot mb-4" src="images/team/shane-romsos.jpg" alt="Shane Romsos">
+                                    <h3 class="text-center">Shane Romsos, M.Sc.</h3>
+                                    <p class="mb-1 text-center">
+                                        Spatial Informatics Group
+                                    </p>
+                                    <div class="line yellow small line-center"></div>
+                                    <p class="text-center">
+                                        Project Manager
                                     </p>
                                 </div>
                             </div>
