--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -72,7 +72,7 @@
                                     Pyregence consortium is founded on open science and technology principles, employing inclusivity and collaboration to tackle complex challenges.
                                 </p>
                                 <div>
-                                    <a href="#" class="btn border-yellow text-white">Learn More</a>
+                                    <a href="#consortium" class="btn border-yellow text-white">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                                                     Forecasting wildfire activity in California to inform the operation of a safe and reliable electric grid
                                                 </p>
                                                 <div class="text-center mt-auto">
-                                                    <a href="#" class="btn border-yellow">Launch Tool</a>
+                                                    <a href="#" class="btn border-yellow">Coming Soon</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -280,7 +280,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container py-5">
+                <div class="container py-5" id="consortium">
                     <div class="row justify-content-center">
                         <div class="col-md-8">
                             <h2 class="text-center text-yellow mb-3">
