--- a/resources/html/fire-behavior.html
+++ b/resources/html/fire-behavior.html
@@ -36,7 +36,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="mobilenav">
+                            <!--<div class="mobilenav">
                                 <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
                                     <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                                         <a href="/" class="nav-link">home</a>
@@ -51,7 +51,7 @@
                                         <a href="/team" class="nav-link">team</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
