--- a/resources/html/scenario-analyses.html
+++ b/resources/html/scenario-analyses.html
@@ -36,7 +36,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="mobilenav">
+                            <!--<div class="mobilenav">
                                 <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
                                     <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                                         <a href="/" class="nav-link">home</a>
@@ -51,7 +51,7 @@
                                         <a href="/team" class="nav-link">team</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                            <!--<div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/jonathan-boldwin.jpg" alt="Jonathan Boldwin">
                                     <h3 class="text-center">Jonathan Boldwin, PhD</h3>
@@ -211,8 +211,8 @@
                                         Programmer and Lead Data Manager
                                     </p>
                                 </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                            </div>-->
+                            <!--<div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/charles-maxwell.jpg" alt="Charles Maxwell">
                                     <h3 class="text-center">Charles Maxwell, PhD</h3>
@@ -224,7 +224,7 @@
                                         Forest Ecosystem Modeler
                                     </p>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/max-moritz.jpg" alt="Max Moritz">
