--- a/resources/html/team.html
+++ b/resources/html/team.html
@@ -38,7 +38,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="mobilenav">
+                            <!--<div class="mobilenav">
                                 <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
                                     <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                                         <a href="/" class="nav-link">home</a>
@@ -53,7 +53,7 @@
                                         <a href="/team" class="nav-link">team</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                                 <h1>Pyregence Team</h1>
                             </div>
                         </div>
-                    </div>    
+                    </div>
                 </header>
                 <section class="team-intro">
                     <div class="container">
@@ -83,7 +83,7 @@
                             </div>
                             <div class="col-md-6 px-4">
                                 <p class="text-justify">
-                                    Consortium partners are from leading research institutions from industry, academia, and government. 
+                                    Consortium partners are from leading research institutions from industry, academia, and government.
                                 </p>
                             </div>
                         </div>
