Team page completed.

--- a/resources/html/header.html
+++ b/resources/html/header.html
@@ -20,9 +20,9 @@
                         </div>
                     </a>
                 </div>
-                <!--<div class="mobilenav">
+                <div class="mobilenav">
                     <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
+                        <!--<li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                             <a href="/" class="nav-link">home</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-documents" class="nav-item">
@@ -30,12 +30,12 @@
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
                             <a href="/data" class="nav-link">data</a>
-                        </li>
+                        </li>-->
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-team" class="nav-item">
                             <a href="/team" class="nav-link">team</a>
                         </li>
                     </ul>
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
