fixed per Matt's comments

--- a/resources/html/team.html
+++ b/resources/html/team.html
@@ -6,15 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
-        <Principal Research Scientist>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</Principal Research Scientist>
+        <title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
         <meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
         <link rel="icon" type="image/png" href="../images/favicon.png">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="js/script.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.css" type="text/css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
         <div class="site">
@@ -23,7 +21,7 @@
                 <div class="container">
                     <div class="row align-items-center" id="nav-row">
                         <div class="col-md-3 col-6">
-                            <a class="navbar-brand" rel="home" href="/" Principal Research Scientist="Pyregence">
+                            <a class="navbar-brand" rel="home" href="/" title="Pyregence">
                                 <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo">
                                 <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white">
                             </a>
@@ -1266,6 +1264,8 @@
                 <p class="text-white text-center mb-0 smaller">&copy; 2020 Pyregence - All Rights Reserved | Terms</p>
             </footer>
         </div>
+        <link href="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.css" type="text/css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/team-filter.js"></script>
     </body>
 </html>
