--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -22,10 +22,10 @@
                 </div>
                 <div class="mobilenav">
                     <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
-                        <!--<li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
+                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                             <a href="/" class="nav-link">home</a>
                         </li>
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-documents" class="nav-item">
+                        <!--<li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-documents" class="nav-item">
                             <a href="/documents" class="nav-link">documents</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
