Team page edits, addition of Data and Documents pages.

--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -25,12 +25,12 @@
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                             <a href="/" class="nav-link">home</a>
                         </li>
-                        <!--<li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-documents" class="nav-item">
+                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-documents" class="nav-item">
                             <a href="/documents" class="nav-link">documents</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
                             <a href="/data" class="nav-link">data</a>
-                        </li>-->
+                        </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-team" class="nav-item">
                             <a href="/team" class="nav-link">team</a>
                         </li>
